# edvantis

./: MMA_Club_Stats_20_Students.xlsx  README.md  project1_data_processing.py  project2_charts_excel.py  project3_presentation.py  pyproject.toml
outputs/: MMA_Club_Charts.xlsx  MMA_Club_Stats_Presentation.pptx  processed_stats.xlsx
